Fix for overlapping hover items

--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 19;
   height: 100%;
   width: 100%;
   background-color: rgba(0,0,0,0.75);
